Add cards with adaptive image

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,7 +10,12 @@
 @import "wrapper";
 @import "title";
 @import "button";
+@import "link";
+@import "card";
+@import "mark";
 //--------------------- Крупные блочные элементы ---------------------
 @import "header";
+@import "menu";
 @import "main";
+@import "cards";
 @import "footer";
