--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -1,3 +1,6 @@
+.main {
+    padding: 50px 0;
+}
 .main__title {
     position: relative;
     width: 750px;
@@ -13,10 +16,21 @@
 }
 
 .slider {
-    width: 800px;
+    max-width: 800px;
     margin: 0 auto;
 }
 
 .slider__item {
-    padding-top: 56.25%;
+    position: relative;
+    padding-bottom: 56.25%;
+}
+
+.slider__img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
